# sidekick

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  rules.py
actions/: __init__.py  base.py  label.py  review_code.py  review_format.py  summarize.py
providers/: __init__.py  anthropic.py  base.py  bedrock.py  google.py  helpers.py  openai.py
repository/: __init__.py  base.py  code_request.py  gitlab.py  helpers.py
