[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick"
version = "0.1.0"
description = "A code review assistant"
authors = [
    { name = "AnarchyCo", email = "contact@anarchyco.com" }
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "google-generativeai>=0.3.2",
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "boto3>=1.34.34",
    "colorama>=0.4.6",
    "tiktoken>=0.5.2",
    "pyyaml>=6.0.1",
    "json5>=0.9.28",
    "black>=24.1.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["actions*", "providers*", "repository*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 